# multiagent-security-gcp

./: .env  .env.example  .gitignore  README.md  jasmine_file.py  main.py
agents/bigquery_agent/: __init__.py  agent.py
agents/cloud_sql_agent/: __init__.py  agent.py
agents/cloud_storage_agent/: __init__.py  agent.py
agents/compute_engine_agent/: __init__.py  agent.py
agents/root_agent/: agent.py
gcp_scanner/: .env  agent.py  pyproject.toml
gcp_scanner/deployment/: deploy.py
gcp_scanner/gcp_scanner/: agent.py  prompt.py
gcp_scanner/gcp_scanner/cloudsploitFunction/: call_cspl.py
gcp_scanner/gcp_scanner/shared_libraries/: constants.py
gcp_scanner/gcp_scanner/subagents/answerAgent/: agent.py  prompt.py
gcp_scanner/gcp_scanner/subagents/scannerAgent/: agent.py  prompt.py
gcp_scanner/gcp_scanner/subagents/searchAgent/: agent.py  prompt.py
gcp_scanner/gcp_scanner/subagents/setKeyAgent/: __init__.py  agent.py
gcp_scanner/gcp_scanner/subagents/summaryAgent/: agent.py  prompt.py
gcp_scanner/gcp_scanner/tools/: memory.py
gcp_scanner/subagents/answerAgent/: agent.py
with_subagents/: main.py  package-lock.json  schemas.py  utils.py
with_subagents/cloudsploitFunction/: call_cspl.py
with_subagents/main_agent/: agent.py  prompt.py
with_subagents/main_agent/subagents/answerAgent/: __init__.py  agent.py  prompt.py
with_subagents/main_agent/subagents/bqAgent/: agent.py
with_subagents/main_agent/subagents/gceAgent/: agent.py
with_subagents/old_subagents/keyAgent/: __init__.py  agent.py
with_subagents/old_subagents/sqlAgent/: agent.py
(+14 files in other folders)
